--- a/src/Interfaz/InterfazInicial.form
+++ b/src/Interfaz/InterfazInicial.form
@@ -1747,11 +1747,12 @@
                         <Component class="javax.swing.JTable" name="EndedProcessesSystem">
                           <Properties>
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                              <Table columnCount="4" rowCount="0">
+                              <Table columnCount="5" rowCount="0">
                                 <Column editable="false" title="ID" type="java.lang.Integer"/>
                                 <Column editable="false" title="Nombre" type="java.lang.String"/>
                                 <Column editable="false" title="PC" type="java.lang.Integer"/>
                                 <Column editable="false" title="Estado" type="java.lang.String"/>
+                                <Column editable="false" title="Longitud" type="java.lang.Integer"/>
                               </Table>
                             </Property>
                             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
